@@ -232,16 +232,22 @@ Popup::update (void)
 	// mail are at the end of each mailbox. We then need to compute
 	// the exact number of mail to display for each mailbox.
 	std::vector <gint> count;
-	for (guint i=0; i<biff_->size(); i++)
-		count.push_back (0);
-	guint index = 0;
-	for (guint i=0; i< biff_->popup_size_; i++) {
-		if (count[index] < gint(biff_->mailbox(index)->unreads()))
-			count[index]++;
-		index++;
-		if (index >= biff_->size())
-			index = 0;
+
+	if (biff_->popup_use_size_) {
+		for (guint i=0; i<biff_->size(); i++)
+			count.push_back (0);
+		guint index = 0;
+		for (guint i=0; i< biff_->popup_size_; i++) {
+			if (count[index] < gint(biff_->mailbox(index)->unreads()))
+				count[index]++;
+			index++;
+			if (index >= biff_->size())
+				index = 0;
+		}
 	}
+	else
+		for (guint i=0; i<biff_->size(); i++)
+			count.push_back (biff_->mailbox(i)->unreads());	
 
 	// Now we populate list
 	for (guint j=0; j<biff_->size(); j++) {
